# EDR

./: .env.example  .gitignore  README.md  docker-compose.yml
agent/: README.md  pyproject.toml
agent/edr_agent/: __main__.py  agent.py  config.py  enrollment.py
agent/edr_agent/buffer/: disk_queue.py
agent/edr_agent/collectors/: base.py  falco_collector.py  osquery_collector.py
agent/edr_agent/normalizer/: ocsf_mapper.py
agent/edr_agent/responder/: actions.py  poller.py
agent/edr_agent/transport/: http_shipper.py
agent/tests/buffer/: test_disk_queue.py
agent/tests/normalizer/: test_ocsf_mapper.py
agent/tests/responder/: test_poller.py
backend/: pyproject.toml
backend/edr_backend/: main.py
backend/edr_backend/ai/: llm_client.py  nl2query.py  summarizer.py
backend/edr_backend/api/: ai.py  alerts.py  detection.py  events.py  hosts.py  hunt.py  incidents.py  ingest.py  response.py
backend/edr_backend/core/: config.py  db.py  security.py
backend/edr_backend/correlation/: grouper.py  incident_view.py  process_tree.py  timeline.py
backend/edr_backend/detection/: attack_map.py  engine.py  sigma_engine.py  yara_engine.py
backend/edr_backend/response/: actions.py  issuer.py  playbook.py
backend/edr_backend/storage/: models.py  opensearch_client.py  repositories.py
backend/tests/ai/: test_explain.py  test_llm_client.py  test_nl2query.py  test_retriever.py  test_summarizer.py
backend/tests/correlation/: test_grouper.py  test_process_tree.py  test_timeline.py
backend/tests/detection/: test_attack_map.py  (+2 more)
shared/: pyproject.toml
shared/edr_schema/: events.py
(+67 files in other folders)
