[project]
name = "edr-agent"
version = "0.1.0"
description = "EDR endpoint agent: collect (osquery/Falco), normalize, buffer, ship, respond"
requires-python = ">=3.11"
dependencies = [
    "edr-schema",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["edr_agent*"]
