[project]
name = "edr-backend"
version = "0.1.0"
description = "EDR backend: ingest gateway, event schema, storage, detection (later phases)"
requires-python = ">=3.11"
dependencies = [
    "edr-schema",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "opensearch-py>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["edr_backend*"]
