[project]
name = "edr-schema"
version = "0.1.0"
description = "EDR shared contract: normalized event schema, imported by agent + backend + ml"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["edr_schema*"]
